--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.9",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "serve-favicon": "^2.5.0"
   }
 }
