Fix start script to point to app.js

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "stock",
   "version": "1.0.0",
-  "main": "app.js",   // 修改為 app.js
+  "main": "app.js",
   "scripts": {
-    "start": "node app.js",   // 修改為 app.js
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
